Bug fix for dark mode

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -121,3 +121,7 @@ img.schools{
 img.publications{
     height: 160px;
 }
+
+.uk-h1, .uk-h2, .uk-h3, .uk-h4, .uk-h5, .uk-h6, .uk-heading-2xlarge, .uk-heading-3xlarge, .uk-heading-large, .uk-heading-medium, .uk-heading-small, .uk-heading-xlarge, h1, h2, h3, h4, h5, h6, li, .uk-text-lead {
+  color: unset;
+}
